--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -65,7 +65,16 @@
                 tools:listitem="@layout/app_switch_item_view" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress_indicator"
+            app:indicatorColor="@color/purpleGradientLight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone"
+            tools:visibility="visible"
+            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
