--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="sub_header_color">#C272FF</color>
     <color name="inverse_surface">#CCCCFF</color>
     <color name="inverse_on_surface">#181F2F</color>
+    <color name="bridge_bot_text_color">#18242F</color>
+    <color name="bridge_bot_surface_variant">#C4C8FF</color>
     <color name="tertiary">#93CBF8</color>
     <color name="md_theme_error">#BA1A1A</color>
     <color name="md_theme_onError">#FFFFFF</color>
